src/assets/sass/pages/_member-resources.scss
.page-member-resources #hero {
	background-image: url('../img/afr-hero-about.jpg');
	background-position: 0 -250px;
	height: 300px;
	background-size: cover;
	background-repeat: no-repeat;

	h1 {
		box-sizing: border-box;
		margin: 0;
		padding-left: 75px;
		line-height: 1.2em;
		padding-top: 150px;
		height: 300px;
		width: 100%;
		background: linear-gradient(rgba(200, 200, 200, 0.3), rgba(25,25,25,0.4));
		position: relative;
		vertical-align: baseline;
	}
}

@media (max-width: 900px) {
	.page-member-resources #hero {
	background-position: initial;
	}
}

.page-member-resources {
	// @todo: update sizing for headings
	section h2 {
		text-align: left;
		font-size: 2em;
	}

	img[src$="#sgimg"] {
		max-width: 750px;
		text-align: center;
	}

	button {
		background: $secondary;
		border: 1px solid transparent;
		transition: all $medium-transition linear;

		a {
			display: block;
			padding: 10px 15px;
			color: $primary;
			text-decoration: none;
		}

		&:hover {
			background: $primary;
			border: 1px solid $secondary;

			a {
				color: $secondary;
			}
		}
	}

	.opp-wrapper > p {
		display: flex;
		align-items: center;
		img {
			padding-right: 25px;
		}
	}
}

